adiciona link ao logo

--- a/NOTÍCIAS/noticia1.html
+++ b/NOTÍCIAS/noticia1.html
@@ -12,7 +12,9 @@
   <header>
     <nav class="nav">
       <div class="nav-esquerda">
-        <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+        <a href="../index.html">
+          <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+        </a>        
         <h3><strong>Beber muita água durante a refeição pode prejudicar a digestão, afirmam especialistas</strong>
         </h3>
       </div>
