--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!-- Navegador -->
     <nav class="nav">
       <div class="nav-esquerda">
-        <img src="./IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+        <a href="index.html">
+          <img src="./IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+        </a>
       </div>
 
       <div class="nav-centro">
