--- a/NOTÍCIAS/noticia12.html
+++ b/NOTÍCIAS/noticia12.html
@@ -12,7 +12,9 @@
     <header>
         <nav class="nav">
             <div class="nav-esquerda">
-                <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                <a href="../index.html">
+                    <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                </a>
                 <h3><strong>Comer proteína no café da manhã reduz vontade de doces e
                         controla a fome o dia inteiro, mostra estudo</strong>
                 </h3>
