--- a/NOTÍCIAS/noticia2.html
+++ b/NOTÍCIAS/noticia2.html
@@ -12,7 +12,9 @@
     <header>
         <nav class="nav">
             <div class="nav-esquerda">
-                <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                <a href="../index.html">
+                    <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                </a>
                 <h3><strong>Comer devagar pode reduzir até 20% das calorias consumidas – sem fazer dieta</strong>
                 </h3>
             </div>
