--- a/NOTÍCIAS/noticia7.html
+++ b/NOTÍCIAS/noticia7.html
@@ -13,7 +13,9 @@
     <header>
         <nav class="nav">
             <div class="nav-esquerda">
-                <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                <a href="../index.html">
+                    <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                </a>
                 <h3><strong>"Light, diet e zero” não significam mais saudável — e a
                         indústria
                         usa esses rótulos para enganar o consumidor</strong>
@@ -50,7 +52,8 @@
                         <li>Um produto light não é necessariamente menos calórico. Ele pode ter uma grande redução de
                             gordura, mas não de açúcar. É fundamental ler o rótulo para ver qual nutriente foi reduzido.
                         </li>
-                        <li>"Light, diet e zero" são indicados para pessoas que desejam reduzir peso ou que querem eliminar especificamente o consumo do
+                        <li>"Light, diet e zero" são indicados para pessoas que desejam reduzir peso ou que querem
+                            eliminar especificamente o consumo do
                             nutriente isento (ex: zero açúcar).</li>
                     </ul>
                 </div>
@@ -79,7 +82,8 @@
                     <li>40% tinham mais gordura</li>
                     <li>Alguns tinham adoçantes que aumentam a fome</li>
                 </ul>
-                <h2 style="color: rgb(120, 117, 117);"><strong>Pesquisa da USP (Universidade de São Paulo):</h2></strong>
+                <h2 style="color: rgb(120, 117, 117);"><strong>Pesquisa da USP (Universidade de São Paulo):</h2>
+                </strong>
                 <ul class="asteriscos">
                     <li>Pessoas que consomem alimentos “light/diet/zero” têm maior chance de ganhar peso a longo prazo.
                     </li>
