--- a/NOTÍCIAS/noticia8.html
+++ b/NOTÍCIAS/noticia8.html
@@ -12,7 +12,9 @@
     <header>
         <nav class="nav">
             <div class="nav-esquerda">
-                <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                <a href="../index.html">
+                    <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                </a>
                 <h3><strong>Dormir mal engorda — e apenas 1 noite de sono ruim já desregula
                         seus hormônios da fome</strong>
                 </h3>
