--- a/NOTÍCIAS/noticia11.html
+++ b/NOTÍCIAS/noticia11.html
@@ -12,7 +12,9 @@
     <header>
         <nav class="nav">
             <div class="nav-esquerda">
-                <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                <a href="../index.html">
+                    <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                </a>
                 <h3><strong>Ultraprocessados podem viciar o cérebro como drogas leves,
                         revelam documentos e estudos científicos</strong>
                 </h3>
