--- a/NOTÍCIAS/noticia3.html
+++ b/NOTÍCIAS/noticia3.html
@@ -12,7 +12,9 @@
     <header>
         <nav class="nav">
             <div class="nav-esquerda">
-                <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                <a href="../index.html">
+                    <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                </a>
                 <h3><strong>Fibras alimentam bactérias boas e podem aumentar a imunidade em até 70%, afirmam
                         cientistas</strong>
                 </h3>
