--- a/NOTÍCIAS/noticia4.html
+++ b/NOTÍCIAS/noticia4.html
@@ -13,7 +13,9 @@
     <header>
         <nav class="nav">
             <div class="nav-esquerda">
-                <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                <a href="../index.html">
+                    <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                </a>
                 <h3><strong>Comer alimentos coloridos pode proteger contra doenças e até prevenir envelhecimento
                         precoce, revelam estudos</strong>
                 </h3>
@@ -25,32 +27,33 @@
     <div class="linha-cards">
         <div class="card">
             <div class="container">
-                    <div class="conteudo">
-                        <h2><strong>Uma nova análise publicada pela <i>Organização Mundial da Saúde (OMS)</i> mostrou
-                                que a
-                                variedade de cores naturais no prato indica diferentes tipos de nutrientes e
-                                antioxidantes,
-                                essenciais para a defesa do corpo.</h2></strong>
-                        <p class="data">18 de setembro de 2025</p>
-                    </div>
-                </div>
-            </div>
-        <div class="card">
-            <div class="container">
-                    <div class="conteudo">
-                        <h2>CURIOSIDADES</h2>
-                        <ul class="asteriscos" style="text-align: justify;">
-                            <li>Prato “sem cor” (arroz, pão, macarrão, carne e só) = pobre em nutrientes e inflamatório.
-                                Nutricionistas
-                                chamam isso de “prato morto”.</li>
-                            <li>Se o prato é colorido NATURALMENTE, é saudável.
-                                Se o prato é colorido ARTIFICIALMENTE, é perigoso.</li>
-                            <li>Atletas de alto rendimento usam “dieta arco-íris” para melhorar recuperação muscular, cérebro e energia.</li>
-                        </ul>
-                    </div>
+                <div class="conteudo">
+                    <h2><strong>Uma nova análise publicada pela <i>Organização Mundial da Saúde (OMS)</i> mostrou
+                            que a
+                            variedade de cores naturais no prato indica diferentes tipos de nutrientes e
+                            antioxidantes,
+                            essenciais para a defesa do corpo.</h2></strong>
+                    <p class="data">18 de setembro de 2025</p>
                 </div>
             </div>
         </div>
+        <div class="card">
+            <div class="container">
+                <div class="conteudo">
+                    <h2>CURIOSIDADES</h2>
+                    <ul class="asteriscos" style="text-align: justify;">
+                        <li>Prato “sem cor” (arroz, pão, macarrão, carne e só) = pobre em nutrientes e inflamatório.
+                            Nutricionistas
+                            chamam isso de “prato morto”.</li>
+                        <li>Se o prato é colorido NATURALMENTE, é saudável.
+                            Se o prato é colorido ARTIFICIALMENTE, é perigoso.</li>
+                        <li>Atletas de alto rendimento usam “dieta arco-íris” para melhorar recuperação muscular,
+                            cérebro e energia.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 
     <div class="container">
@@ -99,7 +102,7 @@
         </div>
     </div>
 
-   <div class="botao-fixo">
+    <div class="botao-fixo">
         <button id="mudar-dark">Alterar Claro/Escuro</button>
     </div>
 
