--- a/NOTÍCIAS/noticia5.html
+++ b/NOTÍCIAS/noticia5.html
@@ -12,7 +12,9 @@
     <header>
         <nav class="nav">
             <div class="nav-esquerda">
-                <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                <a href="../index.html">
+                    <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                </a>
                 <h3><strong> Açúcar em excesso pode enfraquecer o sistema imunológico por
                         até 5 horas, alertam cientistas</strong>
                 </h3>
