--- a/NOTÍCIAS/noticia6.html
+++ b/NOTÍCIAS/noticia6.html
@@ -12,7 +12,9 @@
     <header>
         <nav class="nav">
             <div class="nav-esquerda">
-                <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                <a href="../index.html">
+                    <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                </a>
                 <h3><strong> Nem toda gordura engorda — algumas ajudam a emagrecer e
                         proteger o coração, diz novo estudo</strong>
                 </h3>
