--- a/NOTÍCIAS/noticia9.html
+++ b/NOTÍCIAS/noticia9.html
@@ -13,7 +13,9 @@
     <header>
         <nav class="nav">
             <div class="nav-esquerda">
-                <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                <a href="../index.html">
+                    <img src="../IMAGENS/logo (2).png" alt="Logo Bem Estar+" class="logo">
+                </a>
                 <h3><strong>Metabolismo lento não é genética — é consequência de hábitos, e
                         pode ser acelerado em até 30% com simples mudanças</strong>
                 </h3>
