--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="nav-direita">
-        <u><a href="#">Menu</a></u>
+        <u><a href="#">Home</a></u>
         <u><a href="#comentarios">Comentários</a></u>
         <u><a href="#sobre">Sobre Nós</a></u>
         <u><a href="#contato">Contato</a></u>
